branches/wip/Archive/46f0b88610e63282e7d775a2739d82be-ce759ceac3a1c87b565ff35b2f7d6b5c/output
+ g++ -std=c++11 -Wall -Wextra -pedantic main.cpp
In file included from /usr/local/include/boost/lockfree/queue.hpp:18:0,
                 from main.cpp:3:
/usr/local/include/boost/lockfree/queue.hpp: In instantiation of ‘class boost::lockfree::queue<thing>’:
main.cpp:11:35:   required from here
/usr/local/include/boost/lockfree/queue.hpp:81:5: error: static assertion failed: (boost::has_trivial_destructor<T>::value)
     BOOST_STATIC_ASSERT((boost::has_trivial_destructor<T>::value));
     ^
/usr/local/include/boost/lockfree/queue.hpp:85:5: error: static assertion failed: (boost::has_trivial_assign<T>::value)
     BOOST_STATIC_ASSERT((boost::has_trivial_assign<T>::value));
     ^
